# agentic-ai-solution-accelerator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  accelerator.yaml  azure.yaml  ga-versions.yaml  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements-hooks.txt
.github/: CLA.md  CODEOWNERS  copilot-instructions.md
.github/agents/: add-tool.agent.md  add-worker-agent.agent.md  configure-landing-zone.agent.md  define-grounding.agent.md  delivery-guide.agent.md  deploy-to-env.agent.md  discover-scenario.agent.md  explain-change.agent.md  implement-worker.agent.md  implement-workers.agent.md  ingest-prd.agent.md  scaffold-from-brief.agent.md  switch-to-variant.agent.md
.github/chatmodes/: add-tool.chatmode.md  add-worker-agent.chatmode.md  configure-landing-zone.chatmode.md  define-grounding.chatmode.md  delivery-guide.chatmode.md  deploy-to-env.chatmode.md  discover-scenario.chatmode.md  explain-change.chatmode.md  implement-workers.chatmode.md  ingest-prd.chatmode.md  scaffold-from-brief.chatmode.md  switch-to-variant.chatmode.md
.github/workflows/: deploy.yml  evals.yml  lint.yml  pages.yml  version-matrix.yml
azd-templates/: README.md
azd-templates/actioning-prod/: README.md
azd-templates/actioning-prod-pl/: README.md
azd-templates/retrieval-prod/: README.md
azd-templates/retrieval-prod-pl/: azure.yaml
azd-templates/retrieval-prod-pl/infra/: main.bicep
azd-templates/sandbox-only/: README.md  azure.yaml
azd-templates/sandbox-only/infra/: main.bicep
baseline/: pyproject.toml
baseline-actions/: pyproject.toml
baseline-cache/: pyproject.toml
baseline-cli/: pyproject.toml
baseline-cli/src/azure_agentic_baseline_cli/: main.py
baseline-drift/: pyproject.toml
baseline-feedback/: pyproject.toml
baseline-hitl/: pyproject.toml
baseline/src/azure_agentic_baseline/: __init__.py
compatibility/: drift-classification.yaml  upgrade-transaction-model.md
content/patterns/architecture/: README.md
content/patterns/rai/: README.md
data/samples/: accounts.json
delivery-assets/schema/: qualification.schema.json  spec.schema.json
deploy/: environments.yaml
docs/: agents-index.md  architecture.md  chatmodes-index.md  customer-runbook.md  customization-guide.md  foundry-tool-catalog.md  getting-started.md  index.md  partner-playbook.md  partner-workflow.md  supported-customization-boundary.md  version-matrix.md
docs/agent-specs/: README.md  accel-account-planner.md  accel-competitive-context.md  accel-icp-fit-analyst.md  accel-outreach-personalizer.md  accel-sales-research-supervisor.md
docs/assets/diagrams/: 10-step-flow.excalidraw  brief-to-artifacts.excalidraw  oidc-topology.excalidraw  supervisor-workers.excalidraw
docs/discovery/: SOLUTION-BRIEF-GUIDE.md  discovery-workbook.csv  how-to-use.md  roi-calculator.xlsx  solution-brief.md  use-case-canvas.md
docs/enablement/: customer-github-onboarding.md  hands-on-lab.md  partner-onboarding-checklist.md  self-assessment.md
docs/getting-started/: index.md  setup-and-prereqs.md
docs/governance/: board-decision-log.md  governance-board-charter.md  incident-log.md  waiver-severity-rubric.md
docs/handover/: handover-packet-template.md
docs/patterns/architecture/: README.md
docs/patterns/azure-ai-landing-zone/: README.md
docs/patterns/rai/: README.md
docs/patterns/waf-alignment/: README.md
docs/rai/: attestation-scope.md
docs/references/customer-service-actioning/: README.md
docs/references/rfp-response/: README.md
docs/runbooks/: README.md
docs/start/: index.md
docs/start/deliver/: 01-clone-for-the-customer.md  02-discover-with-the-customer.md  03-scaffold-from-the-brief.md  04-provision-the-customers-azure.md  05-iterate-and-evaluate.md  06-uat-and-handover.md  07-operate-day-2.md
docs/stylesheets/: extra.css
docs/templates/: SoW.md  decisions-template.md  rai-scoping-minutes-template.md
evals/: _runner_common.py
evals/quality/: golden_cases.jsonl  run.py
evals/redteam/: cases.jsonl  run.py
examples/azd-templates/: README.md
examples/specs/: acme-supplier-risk.agent.yaml
infra/: .ga-exceptions.yaml  main.bicep  main.json  main.parameters.alz.json  main.parameters.json
infra/alz-overlay/: README.md  dns-zone-link.bicep  main.bicep  main.parameters.json  network.bicep
infra/avm-reference/: README.md  ai-search.bicep  container-app.bicep  key-vault.bicep  monitor.bicep
infra/dashboards/: roi-kpis.json
infra/modules/: acr.bicep  ai-search.bicep  container-app.bicep  foundry.bicep  identity.bicep  key-vault.bicep  monitor.bicep
packs/itops-incident-triage/: README.md
packs/starter/: README.md
packs/supplier-risk-triage/: README.md
patterns/chat-with-actioning/: README.md
patterns/sales-research-frontend/: .env.example  README.md  index.html  package-lock.json  package.json  staticwebapp.config.json  vite.config.ts
patterns/single-agent/: README.md
scripts/: accelerator-lint.py  build-roi-calculator.py  build_diagrams.py  enforce-acceptance.py  explain-change.py  extract-brief-from-doc.py  find-python.ps1  foundry-bootstrap.py  ga-sdk-freshness.py  prepare-pages.py  scaffold-agent.py  scaffold-scenario.py  seed-search.py  setup-hooks.ps1  setup-hooks.sh  sync-models-from-manifest.py
src/: Dockerfile  bootstrap.py  main.py
src/accelerator_baseline/: __init__.py  citations.py  cost.py  evals.py  hitl.py  killswitch.py  telemetry.py
src/agents/: __init__.py
src/config/: settings.py
src/retrieval/: ai_search.py
src/scenarios/: __init__.py
src/tools/: __init__.py  crm_read.py  crm_write_contact.py  send_email.py  web_search.py
src/workflow/: __init__.py  base.py  registry.py  sales_research_workflow.py  supervisor.py
tests/: test_bootstrap_tool_preservation.py  test_citations.py  test_lint_catalog_tool_hitl.py  test_lint_source_data_fields.py  test_scaffold_scenario_canonical.py  test_scaffold_seeds_evals.py  test_supervisor_dag.py  test_telemetry.py  test_tool_trace_grounding.py
tools/: new-customer-repo.py  tool-catalog-check.py  validate-repo.py  validate-spec.py
(+68 files in other folders)
