[project]
name = "agentic-ai-solution-accelerator"
version = "1.0.0"
description = "Template for production-grade multi-agent Azure solutions (flagship: sales research & outreach)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Pinned to a known-good version matrix. See docs/version-matrix.md.
# Weekly version-matrix.yml CI job re-tests against latest; deprecation policy N-1 minor.
dependencies = [
  "agent-framework>=1.0.0,<2.0.0",
  # Upper bound raised to <3.0.0 because agent-framework-foundry (transitive
  # dep of agent-framework>=1.0.0) requires azure-ai-projects>=2.0.0. Keeping
  # >=1.0.0 floor for flexibility; pip will resolve to the 2.x series in
  # practice to satisfy agent-framework-foundry.
  "azure-ai-projects>=1.0.0,<3.0.0",
  "azure-ai-agents>=1.0.0,<2.0.0",
  "azure-identity>=1.18.0,<2.0.0",
  "azure-keyvault-secrets>=4.8.0,<5.0.0",
  "azure-search-documents>=11.5.0,<12.0.0",
  "azure-mgmt-cognitiveservices>=13.5.0,<14.0.0",
  "azure-monitor-opentelemetry>=1.6.0,<2.0.0",
  "opentelemetry-api>=1.27.0,<2.0.0",
  "opentelemetry-sdk>=1.27.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "httpx>=0.28.0,<1.0.0",
  # Used by scripts/extract-brief-from-doc.py (driver for /ingest-prd).
  # Kept in base deps (not an extra) so the chatmode "just works" on a
  # fresh clone without partners needing to install optional extras.
  "python-docx>=1.1.0,<2.0.0",
  "pypdf>=5.1.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.7",
  "mypy>=1.13",
  "pyright>=1.1.380",
  "pip-audit>=2.7",
  "pyyaml>=6.0.2",
]
evals = [
  "azure-ai-evaluation>=1.0.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling exactly which directories to ship in the wheel. The project
# name ("agentic-ai-solution-accelerator") doesn't match a top-level Python
# package, so hatchling's default file-discovery heuristic fails. Nothing
# imports `agentic_ai_solution_accelerator` as a package — `src/` is a flat
# collection of feature modules. Listing them explicitly here unblocks the
# editable install used by CI to bring in runtime + dev deps.
[tool.hatch.build.targets.wheel]
packages = [
  "src/accelerator_baseline",
  "src/config",
  "src/retrieval",
  "src/scenarios",
  "src/tools",
  "src/workflow",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "W"]
ignore = ["S101"]  # assert-in-tests is fine
