[project]
name = "azure-agentic-baseline-actions"
version = "0.1.0"
description = "T2 profile-required: side-effect tool wrappers (idempotency keys, audit trail, kill-switch wiring). Required when any Spec tool has side_effect: true."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["azure-agentic-baseline>=0.1.0", "azure-agentic-baseline-hitl>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_agentic_baseline_actions"]
