[project]
name = "azure-agentic-baseline-cache"
version = "0.1.0"
description = "T3 reference/example-only: Redis-backed result cache. No attestation support; no cache-dependent SLOs permitted."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["azure-agentic-baseline>=0.1.0", "redis>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_agentic_baseline_cache"]
