[project]
name = "azure-agentic-baseline-cache"
version = "0.1.0"
description = "T3 reference/example-only: Redis-backed result cache. No cache-dependent SLOs permitted in customer KPIs."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["azure-agentic-baseline>=0.1.0", "redis>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_agentic_baseline_cache"]
