[project]
name = "azure-agentic-baseline-cli"
version = "0.1.0"
description = "CLI for the Azure Agentic AI Solution Accelerator. Provides: doctor, upgrade, materialize, attest, reconcile, waive, migrate, sbom."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "azure-agentic-baseline>=0.1.0",
  "typer>=0.12",
  "rich>=13.7",
  "ruamel.yaml>=0.18",
  "sigstore>=3.0",
]

[project.scripts]
baseline = "azure_agentic_baseline_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_agentic_baseline_cli"]
