[project]
name = "azure-agentic-baseline"
version = "0.1.0"
description = "T1 core mandatory baseline for the Azure Agentic AI Solution Accelerator. Cross-cutting primitives (auth, telemetry, retries, cost accounting + ceiling, kill switch, SSE, content sanitization, eval runner, red-team evals, circuit breaker)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft" }]
dependencies = [
  "azure-identity>=1.17",
  "azure-keyvault-secrets>=4.8",
  "azure-monitor-opentelemetry>=1.4",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "httpx>=0.27",
  "pydantic>=2.7",
  "tenacity>=8.4",
]

[project.urls]
Homepage = "https://github.com/Azure/agentic-ai-solution-accelerator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_agentic_baseline"]
